--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,13 +1,21 @@
+
+
 body {
-  background: url('http://eskipaper.com/images/geometric-wallpaper-4.jpg') no-repeat center center fixed;
+  background-image: url('../img/geometric.jpg');
+  /*background-repeat: no-repeat;*/
+  /*background: center fixed;*/
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   font-size: 250%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .box {
+  display: flex;
   background-color: white;
   color: black;
   border-radius: 10px;
@@ -16,36 +24,51 @@ body {
   opacity: 0.7;
   z-index: 1;
   max-width: 400px;
-  float:center;
 }
 
 .display {
+  display:inline-flex;
+  flex-direction: column;
+  flex-wrap: wrap;
   margin: 20px;
-  text-align: center;
   font-family: 'Quicksand';
 }
 
 #top {
-  height: 140px;
+  display:flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 100%;
 }
 
 #icon {
-  float: left;
+  display:flex;
   margin-top: 5px;
 }
 
+#icon1 {
+  max-width: 100px;
+  max-height: 100px;
+}
+
 #tempContainer {
-  float: right;
+  display:flex;
+  max-width: 180px;
   height: 100px;
   margin: 30px 0px 0px 20px;
-  font-size: 70px;
+  font-size: 65px;
   font-family: 'Quicksand';
 }
 
-#pressure, #wind, #humidity{
-  float:center;
+
+#pressure, #wind, #humidity, #weather{
+  display: flex;
+  justify-content: center;
+  font-size: 20px;
 }
 
 #middle{
+  display: flex;
+  flex-direction: column;
   width:100%;
 }
